Fix: removed overflow hidden from small display

--- a/style.css
+++ b/style.css
@@ -109,7 +109,6 @@ body {
   position: relative;
   top: -13px;
   display: flex;
-  overflow: hidden;
   justify-content: flex-end;
   align-self: flex-start;
   border-bottom-color: transparent;
